# graph-rag-is-dope

./: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  LAB19_GROUP_REPORT.md  README.md  REPORT_DEV_A.md  REPORT_DEV_B.md  evaluate_results.py  pyproject.toml  requirements.txt  run_benchmark.py  test_components.py
corpus/: AI21_Labs.txt  AMD.txt  Adept.txt  Adobe.txt  Amazon_Web_Services.txt  Amazon_rainforest.txt  Anthropic.txt  Apple.txt  Character.AI.txt  Cohere.txt  DeepMind.txt  Google.txt  Google_Cloud_Platform.txt  Google_DeepMind.txt  Hugging_Face.txt  IBM.txt  Inflection_AI.txt  Intel.txt  Meta_(prefix).txt  Microsoft.txt  Microsoft_Azure.txt  Mistral_AI.txt  NVIDIA.txt  Nikola_Tesla.txt  OpenAI.txt  Oracle.txt  Qualcomm.txt  Replicate_(biology).txt  Salesforce.txt  Stability_AI.txt  cleaned_AI21_Labs.txt  cleaned_AMD.txt  cleaned_Adept.txt  cleaned_Adobe.txt  cleaned_Amazon_Web_Services.txt  cleaned_Amazon_rainforest.txt  cleaned_Anthropic.txt  cleaned_Apple.txt  cleaned_Character.AI.txt  cleaned_Cohere.txt  (+21 more)
data/chroma_db/7a692ff3-04fb-489e-9502-ef659ec603bd/: index_metadata.pickle
data/graph/: interactive.html  knowledge_graph.gexf  test_graph.gexf
data/results/: benchmark_results.csv
flat-rag/: main.py  requirements.txt  utils.py
lab-guide/: CORPUS_CURATION.md  CORPUS_SUMMARY.md  LAB_19_SUMMARY.md  QUICKSTART.md  TEAM_PLAN.md
scripts/: curate_corpus.py
src/flatrag/: __init__.py
src/graphrag/: __init__.py
src/shared/: __init__.py  benchmark.py  embedder.py
