[project]
name = "graph-rag-is-dope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.0.0",
    "chromadb>=0.4.0",
    "flake8>=6.0.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-text-splitters>=0.0.1",
    "matplotlib>=3.0.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "pyvis>=0.3.2",
    "seaborn>=0.13.0",
    "sentence-transformers>=2.0.0",
    "tqdm>=4.0.0",
]
